--- a/home.html
+++ b/home.html
@@ -1,5 +1,93 @@
 <html>
 <head>
-    <title>test</title>
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
+<body class="body-color">
+<div class="container-fluid pr-1 pl-1">
+<div class="alert-box d-flex justify-content-between align-items-center">
+    <h6>Alerts</h6>
+    <div><img src="assets/images/error transparent.svg"</div>
+</div>
+</div>
+<div class="container-fluid custom-mt-2">
+    <div class="row">
+        <div class="col-lg-7 border-right">
+            <div class="d-flex justify-content-between align-items-center">
+            <div>
+            <span>
+            Find
+            </span>
+                <span>
+            <input class="custom-input-1" type="text"/>
+            </span>
+            </div>
+            <div>
+                <button class="btn btn-grey">Delete</button>
+            </div>
+            </div>
+            <table class="table  table-bordered custom-mt-1">
+                <thead class="table-head">
+                <tr >
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Web Reference</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr >
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                </tr>
+                <tr >
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                </tr>
+                <tr >
+                    <th scope="row">3</th>
+                    <td>Larry</td>
+                    <td>the Bird</td>
+                    <td>@twitter</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-lg-5">
+            <div class="d-flex justify-content-between align-items-center">
+                <h5>Name</h5>
+                <div>
+                <input class="custom-input-1" type="text"/>
+                </div>
+            </div>
+            <div class="d-flex justify-content-between align-items-center custom-mt-1">
+                <h5>Description</h5>
+                <div>
+                    <input class="custom-input-1" type="text"/>
+                </div>
+            </div>
+            <div class="d-flex justify-content-between align-items-center custom-mt-1">
+                <h5>Web Ref.</h5>
+                <div>
+                    <input class="custom-input-1" type="text"/>
+                </div>
+            </div>
+            <div class="d-flex justify-content-end custom-mt-1">
+                <button class="btn btn-grey">Add</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+</body>
 </html>
